--- a/public/css/lfm.css
+++ b/public/css/lfm.css
@@ -384,6 +384,7 @@ time {
 .fab-wrapper.fab-expand .fab-action {
     margin-bottom: 1rem;
     opacity: 1;
+    z-index: 999;
     transition: margin-bottom 350ms, opacity 350ms;
 }
 
